y.output
Terminals unused in grammar

   RETURN
   BOOLEAN
   LSQUARE
   RSQUARE
   COMMA
   TRUE
   FALSE
   COMMENT


State 47 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Declarations

    2 Declarations: Declaration
    3             | Declarations Declaration

    4 Declaration: Type IDENTIFIER SEMICOLON
    5            | Type IDENTIFIER EQ MathAssignment SEMICOLON
    6            | Type IDENTIFIER EQ StringAnyValue SEMICOLON
    7            | IDENTIFIER EQ MathAssignment SEMICOLON
    8            | IDENTIFIER EQ StringAnyValue SEMICOLON
    9            | IDENTIFIER EQ IDENTIFIER SEMICOLON
   10            | IDENTIFIER INC SEMICOLON
   11            | IDENTIFIER DEC SEMICOLON
   12            | Stmt
   13            | error

   14 MathAssignment: IDENTIFIER PLUS MathAssignment
   15               | IDENTIFIER MINUS MathAssignment
   16               | IDENTIFIER MULTIPLY MathAssignment
   17               | IDENTIFIER DIVIDE MathAssignment
   18               | MathAnyValue PLUS MathAssignment
   19               | MathAnyValue MINUS MathAssignment
   20               | MathAnyValue MULTIPLY MathAssignment
   21               | MathAnyValue DIVIDE MathAssignment
   22               | LBRACKET MathAssignment RBRACKET
   23               | LBRACKET MathAssignment RBRACKET PLUS MathAssignment
   24               | LBRACKET MathAssignment RBRACKET MINUS MathAssignment
   25               | LBRACKET MathAssignment RBRACKET MULTIPLY MathAssignment
   26               | LBRACKET MathAssignment RBRACKET DIVIDE MathAssignment
   27               | MINUS LBRACKET MathAssignment RBRACKET
   28               | MINUS LBRACKET MathAssignment RBRACKET PLUS MathAssignment
   29               | MINUS LBRACKET MathAssignment RBRACKET MINUS MathAssignment
   30               | MINUS LBRACKET MathAssignment RBRACKET MULTIPLY MathAssignment
   31               | MINUS LBRACKET MathAssignment RBRACKET DIVIDE MathAssignment
   32               | MINUS MathAnyValue
   33               | MINUS IDENTIFIER
   34               | MathAnyValue
   35               | IDENTIFIER

   36 MathAnyValue: INTVALUE
   37             | FLOATVALUE

   38 StringAnyValue: STRINGVALUE
   39               | CHARVALUE

   40 Expr: Expr EQEQ Expr
   41     | Expr GT Expr
   42     | Expr GTEQ Expr
   43     | Expr LT Expr
   44     | Expr LTEQ Expr
   45     | Expr NEQ Expr
   46     | Expr AND_AND Expr
   47     | Expr OR_OR Expr
   48     | NOT LBRACKET Expr RBRACKET
   49     | LBRACKET Expr RBRACKET
   50     | LBRACKET Expr RBRACKET PLUS Expr
   51     | LBRACKET Expr RBRACKET MINUS Expr
   52     | LBRACKET Expr RBRACKET MULTIPLY Expr
   53     | LBRACKET Expr RBRACKET DIVIDE Expr
   54     | ExprAssignment

   55 ExprAssignment: IDENTIFIER PLUS ExprAssignment
   56               | IDENTIFIER MINUS ExprAssignment
   57               | IDENTIFIER MULTIPLY ExprAssignment
   58               | IDENTIFIER DIVIDE ExprAssignment
   59               | MathAnyValue PLUS ExprAssignment
   60               | MathAnyValue MINUS ExprAssignment
   61               | MathAnyValue MULTIPLY ExprAssignment
   62               | MathAnyValue DIVIDE ExprAssignment
   63               | MINUS LBRACKET ExprAssignment RBRACKET
   64               | MINUS MathAnyValue
   65               | MINUS IDENTIFIER
   66               | MathAnyValue
   67               | IDENTIFIER

   68 Stmt: WhileStmt
   69     | ForStmt
   70     | IfStmt
   71     | DoWhileStmt
   72     | SS

   73 Type: INT
   74     | FLOAT
   75     | CHAR
   76     | STRING
   77     | VOID

   78 WhileStmt: WHILE LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE

   79 Temp1: Declarations
   80      | Declarations BREAK SEMICOLON
   81      | BREAK SEMICOLON

   82 DoWhileStmt: DO LBRACE Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON

   83 ForStmt: FOR LBRACKET CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE

   84 CustomExprForFirst: Type IDENTIFIER EQ MathAssignment
   85                   | IDENTIFIER EQ MathAssignment

   86 CustomExprForThird: IDENTIFIER INC
   87                   | IDENTIFIER DEC
   88                   | IDENTIFIER INC EQ MathAnyValue
   89                   | IDENTIFIER INC EQ IDENTIFIER
   90                   | IDENTIFIER DEC EQ MathAnyValue
   91                   | IDENTIFIER DEC EQ IDENTIFIER
   92                   | IDENTIFIER MULTIPLY EQ MathAnyValue
   93                   | IDENTIFIER MULTIPLY EQ IDENTIFIER
   94                   | IDENTIFIER DIVIDE EQ MathAnyValue
   95                   | IDENTIFIER DIVIDE EQ IDENTIFIER

   96 IfStmt: IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   97       | IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE

   98 SS: SWITCH LBRACKET IDENTIFIER RBRACKET LBRACE B RBRACE

   99 B: Cas
  100  | Cas Cas

  101 Cas: CASE MathAssignment COLON Declarations BREAK SEMICOLON
  102    | CASE StringAnyValue COLON Declarations BREAK SEMICOLON
  103    | BREAK SEMICOLON
  104    | CASE MathAssignment COLON BREAK SEMICOLON
  105    | CASE StringAnyValue COLON BREAK SEMICOLON
  106    | DEFAULT COLON Declarations BREAK SEMICOLON
  107    | DEFAULT COLON BREAK SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 13
INT (258) 73
FLOAT (259) 74
CHAR (260) 75
VOID (261) 77
SEMICOLON (262) 4 5 6 7 8 9 10 11 80 81 82 83 101 102 103 104 105 106
    107
RETURN (263)
STRING (264) 76
DEFAULT (265) 106 107
FOR (266) 83
WHILE (267) 78 82
IF (268) 96 97
ELSE (269) 97
RBRACE (270) 78 82 83 96 97 98
LBRACE (271) 78 82 83 96 97 98
RBRACKET (272) 22 23 24 25 26 27 28 29 30 31 48 49 50 51 52 53 63 78
    82 83 96 97 98
IDENTIFIER (273) 4 5 6 7 8 9 10 11 14 15 16 17 33 35 55 56 57 58 65
    67 84 85 86 87 88 89 90 91 92 93 94 95 98
LBRACKET (274) 22 23 24 25 26 27 28 29 30 31 48 49 50 51 52 53 63 78
    82 83 96 97 98
SWITCH (275) 98
CASE (276) 101 102 104 105
COLON (277) 101 102 104 105 106 107
BREAK (278) 80 81 101 102 103 104 105 106 107
BOOLEAN (279)
LSQUARE (280)
RSQUARE (281)
COMMA (282)
DO (283) 82
TRUE (284)
FALSE (285)
COMMENT (286)
CHARVALUE (287) 39
INTVALUE (288) 36
FLOATVALUE (289) 37
STRINGVALUE (290) 38
EQ (291) 5 6 7 8 9 84 85 88 89 90 91 92 93 94 95
NOT (292) 48
INC (293) 10 86 88 89
DEC (294) 11 87 90 91
PLUS (295) 14 18 23 28 50 55 59
MULTIPLY (296) 16 20 25 30 52 57 61 92 93
MINUS (297) 15 19 24 27 28 29 30 31 32 33 51 56 60 63 64 65
DIVIDE (298) 17 21 26 31 53 58 62 94 95
AND_AND (299) 46
OR_OR (300) 47
EQEQ (301) 40
LTEQ (302) 44
GT (303) 41
GTEQ (304) 42
LT (305) 43
NEQ (306) 45


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
start (53)
    on left: 1, on right: 0
Declarations (54)
    on left: 2 3, on right: 1 3 79 80 101 102 106
Declaration (55)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 3
MathAssignment (56)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35, on right: 5 7 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 84 85 101 104
MathAnyValue (57)
    on left: 36 37, on right: 18 19 20 21 32 34 59 60 61 62 64 66 88
    90 92 94
StringAnyValue (58)
    on left: 38 39, on right: 6 8 102 105
Expr (59)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54, on right:
    40 41 42 43 44 45 46 47 48 49 50 51 52 53 78 82 83 96 97
ExprAssignment (60)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67, on right: 54 55
    56 57 58 59 60 61 62 63
Stmt (61)
    on left: 68 69 70 71 72, on right: 12
Type (62)
    on left: 73 74 75 76 77, on right: 4 5 6 84
WhileStmt (63)
    on left: 78, on right: 68
Temp1 (64)
    on left: 79 80 81, on right: 78 82 83 96 97
DoWhileStmt (65)
    on left: 82, on right: 71
ForStmt (66)
    on left: 83, on right: 69
CustomExprForFirst (67)
    on left: 84 85, on right: 83
CustomExprForThird (68)
    on left: 86 87 88 89 90 91 92 93 94 95, on right: 83
IfStmt (69)
    on left: 96 97, on right: 70
SS (70)
    on left: 98, on right: 72
B (71)
    on left: 99 100, on right: 98
Cas (72)
    on left: 101 102 103 104 105 106 107, on right: 99 100


State 0

    0 $accept: . start $end
    1 start: . Declarations
    2 Declarations: . Declaration
    3             | . Declarations Declaration
    4 Declaration: . Type IDENTIFIER SEMICOLON
    5            | . Type IDENTIFIER EQ MathAssignment SEMICOLON
    6            | . Type IDENTIFIER EQ StringAnyValue SEMICOLON
    7            | . IDENTIFIER EQ MathAssignment SEMICOLON
    8            | . IDENTIFIER EQ StringAnyValue SEMICOLON
    9            | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   10            | . IDENTIFIER INC SEMICOLON
   11            | . IDENTIFIER DEC SEMICOLON
   12            | . Stmt
   13            | . error
   68 Stmt: . WhileStmt
   69     | . ForStmt
   70     | . IfStmt
   71     | . DoWhileStmt
   72     | . SS
   73 Type: . INT
   74     | . FLOAT
   75     | . CHAR
   76     | . STRING
   77     | . VOID
   78 WhileStmt: . WHILE LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   82 DoWhileStmt: . DO LBRACE Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON
   83 ForStmt: . FOR LBRACKET CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE
   96 IfStmt: . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   97       | . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE
   98 SS: . SWITCH LBRACKET IDENTIFIER RBRACKET LBRACE B RBRACE

    error       shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    STRING      shift, and go to state 6
    FOR         shift, and go to state 7
    WHILE       shift, and go to state 8
    IF          shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    SWITCH      shift, and go to state 11
    DO          shift, and go to state 12

    start         go to state 13
    Declarations  go to state 14
    Declaration   go to state 15
    Stmt          go to state 16
    Type          go to state 17
    WhileStmt     go to state 18
    DoWhileStmt   go to state 19
    ForStmt       go to state 20
    IfStmt        go to state 21
    SS            go to state 22


State 1

   13 Declaration: error .

    $default  reduce using rule 13 (Declaration)


State 2

   73 Type: INT .

    $default  reduce using rule 73 (Type)


State 3

   74 Type: FLOAT .

    $default  reduce using rule 74 (Type)


State 4

   75 Type: CHAR .

    $default  reduce using rule 75 (Type)


State 5

   77 Type: VOID .

    $default  reduce using rule 77 (Type)


State 6

   76 Type: STRING .

    $default  reduce using rule 76 (Type)


State 7

   83 ForStmt: FOR . LBRACKET CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE

    LBRACKET  shift, and go to state 23


State 8

   78 WhileStmt: WHILE . LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE

    LBRACKET  shift, and go to state 24


State 9

   96 IfStmt: IF . LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   97       | IF . LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE

    LBRACKET  shift, and go to state 25


State 10

    7 Declaration: IDENTIFIER . EQ MathAssignment SEMICOLON
    8            | IDENTIFIER . EQ StringAnyValue SEMICOLON
    9            | IDENTIFIER . EQ IDENTIFIER SEMICOLON
   10            | IDENTIFIER . INC SEMICOLON
   11            | IDENTIFIER . DEC SEMICOLON

    EQ   shift, and go to state 26
    INC  shift, and go to state 27
    DEC  shift, and go to state 28


State 11

   98 SS: SWITCH . LBRACKET IDENTIFIER RBRACKET LBRACE B RBRACE

    LBRACKET  shift, and go to state 29


State 12

   82 DoWhileStmt: DO . LBRACE Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON

    LBRACE  shift, and go to state 30


State 13

    0 $accept: start . $end

    $end  shift, and go to state 31


State 14

    1 start: Declarations .  [$end]
    3 Declarations: Declarations . Declaration
    4 Declaration: . Type IDENTIFIER SEMICOLON
    5            | . Type IDENTIFIER EQ MathAssignment SEMICOLON
    6            | . Type IDENTIFIER EQ StringAnyValue SEMICOLON
    7            | . IDENTIFIER EQ MathAssignment SEMICOLON
    8            | . IDENTIFIER EQ StringAnyValue SEMICOLON
    9            | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   10            | . IDENTIFIER INC SEMICOLON
   11            | . IDENTIFIER DEC SEMICOLON
   12            | . Stmt
   13            | . error
   68 Stmt: . WhileStmt
   69     | . ForStmt
   70     | . IfStmt
   71     | . DoWhileStmt
   72     | . SS
   73 Type: . INT
   74     | . FLOAT
   75     | . CHAR
   76     | . STRING
   77     | . VOID
   78 WhileStmt: . WHILE LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   82 DoWhileStmt: . DO LBRACE Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON
   83 ForStmt: . FOR LBRACKET CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE
   96 IfStmt: . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   97       | . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE
   98 SS: . SWITCH LBRACKET IDENTIFIER RBRACKET LBRACE B RBRACE

    error       shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    STRING      shift, and go to state 6
    FOR         shift, and go to state 7
    WHILE       shift, and go to state 8
    IF          shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    SWITCH      shift, and go to state 11
    DO          shift, and go to state 12

    $end  reduce using rule 1 (start)

    Declaration  go to state 32
    Stmt         go to state 16
    Type         go to state 17
    WhileStmt    go to state 18
    DoWhileStmt  go to state 19
    ForStmt      go to state 20
    IfStmt       go to state 21
    SS           go to state 22


State 15

    2 Declarations: Declaration .

    $default  reduce using rule 2 (Declarations)


State 16

   12 Declaration: Stmt .

    $default  reduce using rule 12 (Declaration)


State 17

    4 Declaration: Type . IDENTIFIER SEMICOLON
    5            | Type . IDENTIFIER EQ MathAssignment SEMICOLON
    6            | Type . IDENTIFIER EQ StringAnyValue SEMICOLON

    IDENTIFIER  shift, and go to state 33


State 18

   68 Stmt: WhileStmt .

    $default  reduce using rule 68 (Stmt)


State 19

   71 Stmt: DoWhileStmt .

    $default  reduce using rule 71 (Stmt)


State 20

   69 Stmt: ForStmt .

    $default  reduce using rule 69 (Stmt)


State 21

   70 Stmt: IfStmt .

    $default  reduce using rule 70 (Stmt)


State 22

   72 Stmt: SS .

    $default  reduce using rule 72 (Stmt)


State 23

   73 Type: . INT
   74     | . FLOAT
   75     | . CHAR
   76     | . STRING
   77     | . VOID
   83 ForStmt: FOR LBRACKET . CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE
   84 CustomExprForFirst: . Type IDENTIFIER EQ MathAssignment
   85                   | . IDENTIFIER EQ MathAssignment

    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    STRING      shift, and go to state 6
    IDENTIFIER  shift, and go to state 34

    Type                go to state 35
    CustomExprForFirst  go to state 36


State 24

   36 MathAnyValue: . INTVALUE
   37             | . FLOATVALUE
   40 Expr: . Expr EQEQ Expr
   41     | . Expr GT Expr
   42     | . Expr GTEQ Expr
   43     | . Expr LT Expr
   44     | . Expr LTEQ Expr
   45     | . Expr NEQ Expr
   46     | . Expr AND_AND Expr
   47     | . Expr OR_OR Expr
   48     | . NOT LBRACKET Expr RBRACKET
   49     | . LBRACKET Expr RBRACKET
   50     | . LBRACKET Expr RBRACKET PLUS Expr
   51     | . LBRACKET Expr RBRACKET MINUS Expr
   52     | . LBRACKET Expr RBRACKET MULTIPLY Expr
   53     | . LBRACKET Expr RBRACKET DIVIDE Expr
   54     | . ExprAssignment
   55 ExprAssignment: . IDENTIFIER PLUS ExprAssignment
   56               | . IDENTIFIER MINUS ExprAssignment
   57               | . IDENTIFIER MULTIPLY ExprAssignment
   58               | . IDENTIFIER DIVIDE ExprAssignment
   59               | . MathAnyValue PLUS ExprAssignment
   60               | . MathAnyValue MINUS ExprAssignment
   61               | . MathAnyValue MULTIPLY ExprAssignment
   62               | . MathAnyValue DIVIDE ExprAssignment
   63               | . MINUS LBRACKET ExprAssignment RBRACKET
   64               | . MINUS MathAnyValue
   65               | . MINUS IDENTIFIER
   66               | . MathAnyValue
   67               | . IDENTIFIER
   78 WhileStmt: WHILE LBRACKET . Expr RBRACKET LBRACE Temp1 RBRACE

    IDENTIFIER  shift, and go to state 37
    LBRACKET    shift, and go to state 38
    INTVALUE    shift, and go to state 39
    FLOATVALUE  shift, and go to state 40
    NOT         shift, and go to state 41
    MINUS       shift, and go to state 42

    MathAnyValue    go to state 43
    Expr            go to state 44
    ExprAssignment  go to state 45


State 25

   36 MathAnyValue: . INTVALUE
   37             | . FLOATVALUE
   40 Expr: . Expr EQEQ Expr
   41     | . Expr GT Expr
   42     | . Expr GTEQ Expr
   43     | . Expr LT Expr
   44     | . Expr LTEQ Expr
   45     | . Expr NEQ Expr
   46     | . Expr AND_AND Expr
   47     | . Expr OR_OR Expr
   48     | . NOT LBRACKET Expr RBRACKET
   49     | . LBRACKET Expr RBRACKET
   50     | . LBRACKET Expr RBRACKET PLUS Expr
   51     | . LBRACKET Expr RBRACKET MINUS Expr
   52     | . LBRACKET Expr RBRACKET MULTIPLY Expr
   53     | . LBRACKET Expr RBRACKET DIVIDE Expr
   54     | . ExprAssignment
   55 ExprAssignment: . IDENTIFIER PLUS ExprAssignment
   56               | . IDENTIFIER MINUS ExprAssignment
   57               | . IDENTIFIER MULTIPLY ExprAssignment
   58               | . IDENTIFIER DIVIDE ExprAssignment
   59               | . MathAnyValue PLUS ExprAssignment
   60               | . MathAnyValue MINUS ExprAssignment
   61               | . MathAnyValue MULTIPLY ExprAssignment
   62               | . MathAnyValue DIVIDE ExprAssignment
   63               | . MINUS LBRACKET ExprAssignment RBRACKET
   64               | . MINUS MathAnyValue
   65               | . MINUS IDENTIFIER
   66               | . MathAnyValue
   67               | . IDENTIFIER
   96 IfStmt: IF LBRACKET . Expr RBRACKET LBRACE Temp1 RBRACE
   97       | IF LBRACKET . Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE

    IDENTIFIER  shift, and go to state 37
    LBRACKET    shift, and go to state 38
    INTVALUE    shift, and go to state 39
    FLOATVALUE  shift, and go to state 40
    NOT         shift, and go to state 41
    MINUS       shift, and go to state 42

    MathAnyValue    go to state 43
    Expr            go to state 46
    ExprAssignment  go to state 45


State 26

    7 Declaration: IDENTIFIER EQ . MathAssignment SEMICOLON
    8            | IDENTIFIER EQ . StringAnyValue SEMICOLON
    9            | IDENTIFIER EQ . IDENTIFIER SEMICOLON
   14 MathAssignment: . IDENTIFIER PLUS MathAssignment
   15               | . IDENTIFIER MINUS MathAssignment
   16               | . IDENTIFIER MULTIPLY MathAssignment
   17               | . IDENTIFIER DIVIDE MathAssignment
   18               | . MathAnyValue PLUS MathAssignment
   19               | . MathAnyValue MINUS MathAssignment
   20               | . MathAnyValue MULTIPLY MathAssignment
   21               | . MathAnyValue DIVIDE MathAssignment
   22               | . LBRACKET MathAssignment RBRACKET
   23               | . LBRACKET MathAssignment RBRACKET PLUS MathAssignment
   24               | . LBRACKET MathAssignment RBRACKET MINUS MathAssignment
   25               | . LBRACKET MathAssignment RBRACKET MULTIPLY MathAssignment
   26               | . LBRACKET MathAssignment RBRACKET DIVIDE MathAssignment
   27               | . MINUS LBRACKET MathAssignment RBRACKET
   28               | . MINUS LBRACKET MathAssignment RBRACKET PLUS MathAssignment
   29               | . MINUS LBRACKET MathAssignment RBRACKET MINUS MathAssignment
   30               | . MINUS LBRACKET MathAssignment RBRACKET MULTIPLY MathAssignment
   31               | . MINUS LBRACKET MathAssignment RBRACKET DIVIDE MathAssignment
   32               | . MINUS MathAnyValue
   33               | . MINUS IDENTIFIER
   34               | . MathAnyValue
   35               | . IDENTIFIER
   36 MathAnyValue: . INTVALUE
   37             | . FLOATVALUE
   38 StringAnyValue: . STRINGVALUE
   39               | . CHARVALUE

    IDENTIFIER   shift, and go to state 47
    LBRACKET     shift, and go to state 48
    CHARVALUE    shift, and go to state 49
    INTVALUE     shift, and go to state 39
    FLOATVALUE   shift, and go to state 40
    STRINGVALUE  shift, and go to state 50
    MINUS        shift, and go to state 51

    MathAssignment  go to state 52
    MathAnyValue    go to state 53
    StringAnyValue  go to state 54


State 27

   10 Declaration: IDENTIFIER INC . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 28

   11 Declaration: IDENTIFIER DEC . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 29

   98 SS: SWITCH LBRACKET . IDENTIFIER RBRACKET LBRACE B RBRACE

    IDENTIFIER  shift, and go to state 57


State 30

    2 Declarations: . Declaration
    3             | . Declarations Declaration
    4 Declaration: . Type IDENTIFIER SEMICOLON
    5            | . Type IDENTIFIER EQ MathAssignment SEMICOLON
    6            | . Type IDENTIFIER EQ StringAnyValue SEMICOLON
    7            | . IDENTIFIER EQ MathAssignment SEMICOLON
    8            | . IDENTIFIER EQ StringAnyValue SEMICOLON
    9            | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   10            | . IDENTIFIER INC SEMICOLON
   11            | . IDENTIFIER DEC SEMICOLON
   12            | . Stmt
   13            | . error
   68 Stmt: . WhileStmt
   69     | . ForStmt
   70     | . IfStmt
   71     | . DoWhileStmt
   72     | . SS
   73 Type: . INT
   74     | . FLOAT
   75     | . CHAR
   76     | . STRING
   77     | . VOID
   78 WhileStmt: . WHILE LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   79 Temp1: . Declarations
   80      | . Declarations BREAK SEMICOLON
   81      | . BREAK SEMICOLON
   82 DoWhileStmt: . DO LBRACE Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON
   82            | DO LBRACE . Temp1 RBRACE WHILE LBRACKET Expr RBRACKET SEMICOLON
   83 ForStmt: . FOR LBRACKET CustomExprForFirst SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE
   96 IfStmt: . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE
   97       | . IF LBRACKET Expr RBRACKET LBRACE Temp1 RBRACE ELSE LBRACE Temp1 RBRACE
   98 SS: . SWITCH LBRACKET IDENTIFIER RBRACKET LBRACE B RBRACE

    error       shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CHAR        shift, and go to state 4
    VOID        shift, and go to state 5
    STRING      shift, and go to state 6
    FOR         shift, and go to state 7
    WHILE       shift, and go to state 8
    IF          shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    SWITCH      shift, and go to state 11
    BREAK       shift, and go to state 58
    DO          shift, and go to state 12

    Declarations  go to state 59
    Declaration   go to state 15
    Stmt          go to state 16
    Type          go to state 17
    WhileStmt     go to state 18
    Temp1         go to state 60
    DoWhileStmt   go to state 19
    ForStmt       go to state 20
    IfStmt        go to state 21
    SS            go to state 22


State 31

    0 $accept: start $end .

    $default  accept


State 32

    3 Declarations: Declarations Declaration .

    $default  reduce using rule 3 (Declarations)


State 33

    4 Declaration: Type IDENTIFIER . SEMICOLON
    5            | Type IDENTIFIER . EQ MathAssignment SEMICOLON
    6            | Type IDENTIFIER . EQ StringAnyValue SEMICOLON

    SEMICOLON  shift, and go to state 61
    EQ         shift, and go to state 62


State 34

   85 CustomExprForFirst: IDENTIFIER . EQ MathAssignment

    EQ  shift, and go to state 63


State 35

   84 CustomExprForFirst: Type . IDENTIFIER EQ MathAssignment

    IDENTIFIER  shift, and go to state 64


State 36

   83 ForStmt: FOR LBRACKET CustomExprForFirst . SEMICOLON Expr SEMICOLON CustomExprForThird RBRACKET LBRACE Temp1 RBRACE

    SEMICOLON  shift, and go to state 65


State 37

   55 ExprAssignment: IDENTIFIER . PLUS ExprAssignment
   56               | IDENTIFIER . MINUS ExprAssignment
   57               | IDENTIFIER . MULTIPLY ExprAssignment
   58               | IDENTIFIER . DIVIDE ExprAssignment
   67               | IDENTIFIER .  [SEMICOLON, RBRACKET, AND_AND, OR_OR, EQEQ, LTEQ, GT, GTEQ, LT, NEQ]

    PLUS      shift, and go to state 66
    MULTIPLY  shift, and go to state 67
    MINUS     shift, and go to state 68
    DIVIDE    shift, and go to state 69

    $default  reduce using rule 67 (ExprAssignment)


State 38

   36 MathAnyValue: . INTVALUE
   37             | . FLOATVALUE
   40 Expr: . Expr EQEQ Expr
   41     | . Expr GT Expr
   42     | . Expr GTEQ Expr
   43     | . Expr LT Expr
   44     | . Expr LTEQ Expr
   45     | . Expr NEQ Expr
   46     | . Expr AND_AND Expr
   47     | . Expr OR_OR Expr
   48     | . NOT LBRACKET Expr RBRACKET
   49     | . LBRACKET Expr RBRACKET
   49     | LBRACKET . Expr RBRACKET
   50     | . LBRACKET Expr RBRACKET PLUS Expr
   50     | LBRACKET . Expr RBRACKET PLUS Expr
   51     | . LBRACKET Expr RBRACKET MINUS Expr
   51     | LBRACKET . Expr RBRACKET MINUS Expr
   52     | . LBRACKET Expr RBRACKET MULTIPLY Expr
   52     | LBRACKET . Expr RBRACKET MULTIPLY Expr
   53     | . LBRACKET Expr RBRACKET DIVIDE Expr
   53     | LBRACKET . Expr RBRACKET DIVIDE Expr
   54     | . ExprAssignment
   55 ExprAssignment: . IDENTIFIER PLUS ExprAssignment
   56               | . IDENTIFIER MINUS ExprAssignment
   57               | . IDENTIFIER MULTIPLY ExprAssignment
   58               | . IDENTIFIER DIVIDE ExprAssignment
   59               | . MathAnyValue PLUS ExprAssignment
   60               | . MathAnyValue MINUS ExprAssignment
   61               | . MathAnyValue MULTIPLY ExprAssignment
   62               | . MathAnyValue DIVIDE ExprAssignment
   63               | . MINUS LBRACKET ExprAssignment RBRACKET
   64               | . MINUS MathAnyValue
   65               | . MINUS IDENTIFIER
   66               | . MathAnyValue
   67               | . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    LBRACKET    shift, and go to state 38
    INTVALUE    shift, and go to state 39
    FLOATVALUE  shift, and go to state 40
    NOT         shift, and go to state 41
    MINUS       shift, and go to state 42

    MathAnyValue    go to state 43
    Expr            go to state 70
    ExprAssignment  go to state 45


State 39

   36 MathAnyValue: INTVALUE .

    $default  reduce using rule 36 (MathAnyValue)


State 40

   37 MathAnyValue: FLOATVALUE .

    $default  reduce using rule 37 (MathAnyValue)


State 41

   48 Expr: NOT . LBRACKET Expr RBRACKET

    LBRACKET  shift, and go to state 71


State 42

   36 MathAnyValue: . INTVALUE
   37             | . FLOATVALUE
   63 ExprAssignment: MINUS . LBRACKET ExprAssignment RBRACKET
   64               | MINUS . MathAnyValue
   65               | MINUS . IDENTIFIER

    IDENTIFIER  shift, and go to state 72
    LBRACKET    shift, and go to state 73
    INTVALUE    shift, and go to state 39
    FLOATVALUE  shift, and go to state 40

    MathAnyValue  go to state 74


State 43

   59 ExprAssignment: MathAnyValue . PLUS ExprAssignment
   60               | MathAnyValue . MINUS ExprAssignment
   61               | MathAnyValue . MULTIPLY ExprAssignment
   62               | MathAnyValue . DIVIDE ExprAssignment
   66               | MathAnyValue .  [SEMICOLON, RBRACKET, AND_AND, OR_OR, EQEQ, LTEQ, GT, GTEQ, LT, NEQ]

    PLUS      shift, and go to state 75
    MULTIPLY  shift, and go to state 76
    MINUS     shift, and go to state 77
    DIVIDE    shift, and go to state 78

    $default  reduce using rule 66 (ExprAssignment)


State 44

   40 Expr: Expr . EQEQ Expr
   41     | Expr . GT Expr
   42     | Expr . GTEQ Expr
   43     | Expr . LT Expr
   44     | Expr . LTEQ Expr
   45     | Expr . NEQ Expr
   46     | Expr . AND_AND Expr
   47     | Expr . OR_OR Expr
   78 WhileStmt: WHILE LBRACKET Expr . RBRACKET LBRACE Temp1 RBRACE

    RBRACKET  shift, and go to state 79
    AND_AND   shift, and go to state 80
    OR_OR     shift, and go to state 81
    EQEQ      shift, and go to state 82
    LTEQ      shift, and go to state 83
    GT        shift, and go to state 84
    GTEQ      shift, and go to state 85
    LT        shift, and go to state 86
    NEQ       shift, and go to state 87


State 45

   54 Expr: ExprAssignment .

    $default  reduce using rule 54 (Expr)


State 46
